--- a/calculator.css
+++ b/calculator.css
@@ -1,8 +1,12 @@
 body{
   text-align: center;
+  wideth: 100%;
+  height:100%;
 }
 input{
   width: 110px;
+  color:white;
+  background:black;
 }
 #button{
   size: 100px;
